Remove consumes and produces